# HPC

./: CMakeLists.txt  README.md  driver_1D_transient_heat.cpp
analysis/: SOL_ERROR  SOL_ERROR_1  SOL_ERROR_2  SOL_ERROR_3_0  SOL_ERROR_3_1  SOL_ERROR_3_2  SOL_ERROR_3_3  SOL_ERROR_3_4  SOL_ERROR_3_5  SOL_ERROR_3_6  SOL_ERROR_3_7  SOL_ERROR_3_8  SOL_ERROR_3_N1  SOL_ERROR_3_TEMPORAL_1  SOL_ERROR_3_TEMPORAL_10  SOL_ERROR_3_TEMPORAL_3  SOL_ERROR_3_TEMPORAL_4  SOL_ERROR_3_TEMPORAL_5  SOL_ERROR_3_TEMPORAL_6  SOL_ERROR_3_TEMPORAL_7  SOL_ERROR_3_TEMPORAL_8  SOL_ERROR_3_TEMPORAL_9  SOL_ERROR_IM_3_1  SOL_ERROR_IM_3_10  SOL_ERROR_IM_3_2  SOL_ERROR_IM_3_3  SOL_ERROR_IM_3_4  SOL_ERROR_IM_3_5  SOL_ERROR_IM_3_6  SOL_ERROR_IM_3_7  SOL_ERROR_IM_3_8  SOL_ERROR_IM_3_9  convergence_analysis.asv  convergence_analysis.m  heat_explicit_error_compare.m  read_binary.asv  read_binary.m  read_binary_Spatial_Error.asv  read_binary_Spatial_Error.m  read_binary_Spatial_Error_Implicit.m  (+3 more)
include/: Manufactured_Solution.hpp  Vec2Array.hpp  hdf5_tools.hpp  heat_solver.hpp  vtk_tools.hpp
src/postprocessing/: hdf5_tools.cpp  vtk_tools.cpp
src/solver/: heat_solver.cpp
src/utils/: Vec2Array.cpp
